[TIL] Object.clas

--- a/java/실행 순서와 메모리 구조.md
+++ b/java/실행 순서와 메모리 구조.md
@@ -11,6 +11,8 @@
 # jvm 메모리 구조
 > ``RunTime Data`` 영역은 JVM의 메모리 영역으로 자바 애플리케이션을 실행할 때 사용되는 데이터들을 적재하는 영역이다.
 
+![img](https://velog.velcdn.com/images%2Fplz_no_anr%2Fpost%2F63e67428-ff8c-4e3f-b3a7-b0a8ffb82872%2FJVM.png)
+
 ## Method = static
 - 모든 스레드가 공유하는 영역이다. 프로그램 전체에 공유된다.
 - 클래스 파일 정보, 변수의 정보와 같은 클래스 구조와 static 필드들이 저장된다.
@@ -30,10 +32,14 @@
 - 동적 메모리 할당이 가능해 프로그램 실행 중에 메모리크기가 가변적으로 할당된다.
 - 메모리 크기가 유동적이지만 동적으로 할당된 메모리가 제대로 해제되지 않는 경우 메모리 누수가 발생할 수 있다.
 
-## Stack Area
+## Stack
 - 각 스레드마다 개별 생성되는 영역이다.
 - 메소드의 작업에 필요한 메모리 공간을 제공한다. 메소드 호출마다 각각의 스택이 생성되며 메석드가 작업을 마치면 스택도 함께 사라진다.
 - 기본 자료형을 생성할 때 저장되는 공간으로 임시적으로 사용되는 변수나 정보들이 들어간다.
 - 메서드 안에서 사용되는 값들을 저장하고 호출된 메서드의 매개변수, 지역변수, 리턴 값, 연산시 발생하는 값들을 임시로 저장한다.
 - 정적 메모리 할당으로 컴파일시에 크기가 결정되며, 초과시 stackOverFlow 에러가 발생한다.
 - 데이터 접근방식이 단순하고 속도가 빠르다. FIFO
+
+## PC Register
+
+## Native Method Stack
