[TIL] String, StringBuilder, StringBuffer

--- a/java 성능 튜닝 이야기/2. 프로파일링툴, APM 툴.md
+++ b/java 성능 튜닝 이야기/2. 프로파일링툴, APM 툴.md
@@ -14,17 +14,6 @@ jmh {
     iterations = 5
 }
 
-warmupIterations = 1:
-
-warmupIterations는 실제 벤치마크를 수행하기 전에 워밍업을 몇 번 실행할지를 설정합니다.
-warmupIterations = 1은 본격적인 측정을 시작하기 전에 한 번의 워밍업을 실행한다는 뜻입니다.
-워밍업 단계에서는 JVM의 JIT 컴파일러가 코드를 최적화할 시간이 주어지기 때문에, 이 과정 없이 곧바로 측정을 시작하면 실제 성능을 반영하지 않을 수 있습니다.
-iterations = 1:
-
-iterations는 벤치마크를 몇 번 반복해서 측정할지를 설정합니다.
-iterations = 1은 실제 벤치마크를 한 번만 실행한다는 뜻입니다.
-일반적으로 여러 번의 반복 측정을 통해 평균 성능을 구하지만, 여기서는 한 번만 측정하고 그 결과를 사용하게 됩니다.
-
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
@@ -42,6 +31,7 @@ dependencies {
 - warmupIterations
   - 실제 벤치마크를 수행하기 전에 워밍업을 몇 번 실행할지를 설정
   - 워밍업 단계에서는 JVM의 JIT 컴파일러가 코드를 최적화할 시간이 주어지기 때문에, 이 과정 없이 곧바로 측정을 시작하면 실제 성능을 반영하지 않을 수 있습니다.
+  - 무조건 처음 실행한 화면의 결과 값은 무시해야한다. 클래스를 메모리로 로딩할때는 시간이 오래 걸리기 때문에, 그때 측정한 결과 값은 의미가 없다. 
 - iterations
   - 벤치마크를 몇 번 반복해서 측정할지를 설정 
   - 반복 측정 횟수도 10회로 설정하는 것이 좋습니다. 이렇게 하면 평균적인 성능을 도출할 수 있으며, 결과가 특정 상황에 지나치게 치우치는 것을 방지할 수 있습니다.
