[TIL] 콜렉션, for 루프

--- a/java 성능 튜닝 이야기/4. 어디에 담아야 하는지.md
+++ b/java 성능 튜닝 이야기/4. 어디에 담아야 하는지.md
@@ -1,26 +1,96 @@
-# List
-성능은 참조하되 각 콜렉션의 특징을 이해하고 알맞는 클래스를 사용하는 것이 중요하다.
-### List 별 성능 테스트
-#### write : 
-#### read : 
+# Collection
+성능은 참조하되 각 콜렉션의 특징을 이해하고 목적에 부합하는 클래스를 사용하는 것이 중요하다.
+
+### List
+순서가 있는 집합을 처리하기 위한 인터페이스이기 때문에 인덱스가 있어 위치를 지정하여 값을 찾을 수 있다.
+#### write : https://github.com/ohsuha/code_scratch/blob/master/code_scratch/src/jmh/java/test/AddList.java
+| Benchmark                           | Mode | Cnt | Score  | Error | Units |
+|-------------------------------------|------|-----|--------|-------|-------|
+| AddList.addArrayList                | avgt | 10  | 15.185 | 0.058 | us/op |
+| AddList.addArrayListWithInitialSize | avgt | 10  | 14.977 | 0.456 | us/op |
+| AddList.addLinkedList               | avgt | 10  | 15.091 | 0.305 | us/op |
+| AddList.addVector                   | avgt | 10  | 23.087 | 1.036 | us/op |
+| AddList.addVectorWithInitialSize    | avgt | 10  | 30.402 | 1.377 | us/op |
+#### read : https://github.com/ohsuha/code_scratch/blob/master/code_scratch/src/jmh/java/test/ReadList.java
+
+| Benchmark               | Mode | Cnt | Score   | Error  | Units |
+|-------------------------|------|-----|---------|--------|-------|
+| ReadList.arrayList      | avgt | 10  | 1.970   | 0.008  | us/op |
+| ReadList.arrayListForeach | avgt | 10  | 1.680   | 0.055  | us/op |
+| ReadList.linkedList     | avgt | 10  | 416.806 | 41.180 | us/op |
+| ReadList.linkedListPeek | avgt | 10  | 9.663   | 0.868  | us/op |
+| ReadList.vector         | avgt | 10  | 13.317  | 0.036  | us/op |
+
 ### ArrayList
 - 순서가 유지 된다.
-- 
+- 배열의 처음과 마지막 값을 삭제할 때 성능차이가 크다.
+  - 내부에서 배열을 사용하기 때문에 배열의 0번째 값을 삭제하면 이후 모든 값이 위치를 옮겨야하므로 느리다.
+  - 벡터도 마찬가지
+- 기본 값을 넘어서면 더 큰 사이즈의 배열이 생성되어 복사되므로 데이터 갯수를 알 경우에는 기본 값을 설정해주는것이 더 빠르다.
+- 값을 가져올때 for(i) 조건문보다 .forEach() 를 사용하면 더 빠르다.
 ### Vector
-- 스레드에 안전하다.
+- 스레드에 안전하다. `get()` 메서드에 synchronized 가 선언되어 성능이 느릴 수 밖에 없다.
 ### LinkedList
-- 가장 첫번째, 마지막 것을 꺼내거나 중간에 데이터를 추가하기에 가장 빠르다.
+- linked list 는 queue 인터페이스를 상속받기 때문에 `peek()` 이나 `poll()` 을 사용해야한다
+- 배열이 아니라 다음 값에 대한 주소를 참조해 위치를 정하기 때문에 데이터를 추가하거나 삭제할때 성능이 좋다.
 
 # Set
+중복을 허용하지 않는 집합을 처리하기 위한 인터페이스
+#### write : https://github.com/ohsuha/code_scratch/blob/master/code_scratch/src/jmh/java/test/AddSet.java
+| Benchmark                        | Mode | Cnt | Score    | Error   | Units |
+|----------------------------------|------|-----|----------|---------|-------|
+| AddSet.addHashSet                | avgt | 10  | 55.701   | 1.981   | us/op |
+| AddSet.addHashSetWithInitialSize | avgt | 10  | 51.183   | 1.629   | us/op |
+| AddSet.addLinkedHashSet          | avgt | 10  | 60.475   | 4.723   | us/op |
+| AddSet.addTreeSet                | avgt | 10  | 8279.264 | 323.274 | us/op |
+
+#### read : https://github.com/ohsuha/code_scratch/blob/master/code_scratch/src/jmh/java/test/ReadSet.java
+| Benchmark                    | Mode | Cnt | Score | Error | Units |
+|------------------------------|------|-----|-------|-------|-------|
+| ReadSet.iterateHashSet       | avgt | 10  | 7.070 | 0.015 | us/op |
+| ReadSet.iterateLinkedHashSet | avgt | 10  | 3.538 | 0.095 | us/op |
+| ReadSet.iterateTreeSet       | avgt | 10  | 7.270 | 0.628 | us/op |
+
 ### HashSet
+- 데이터를 해쉬 테이블에 담는 클래스로 순서 없이 저장된다.
+- 저장되는 데이터의 크기를 알고 있을 경우 객체 생성시 크기를 미리 지정하는 것이 성능상 유리하다.
 ### LinkedHashSet
+- 저장된 순서에 따라서 순서적으로 해쉬 테이블에 저장한다.
+- 데이터를 순서에 따라 읽어올 때는 가장 빠르다.
 ### TreeSet
+- red-black이라는 트리에 데이터를 담는다. 값에 따라서 순서가 정해진다. 데이터를 담으면서 동시에 정렬하기 때문에 HashSet보다 성능상 느리다.
+- NavigableSet 이라는 인터페이스를 구현했다. 데이터를 순서에 따라 탐색하는 작업이 필요할때 사용하는 것을 추천한다.
 
 # Map
+Map은 Key와 Value 쌍으로 저장되는 구조체이다. 그래서, 단일 객체만 저장되는 다른 Collection API들과는 다르게 따로 구분되어 있다.
 ### HashMap
+- 데이터를 해쉬 테이블에 담는 클래스이다.
+- HashTable 클래스와는 다르게 null 값을 허용한다
+- 동기화되어 있지 않다. 스레드에 안전하지 않다.
 ### LinkedHashMap
+- HashMap과 거의 동일하며 이중 연결 리스트(Doubly-LinkedList)라는 방식을 사용하여 데이터를 담는다는 점만 다르다.
 ### TreeMap
+- red-black 트리에 데이터를 담는다. TreeSet과는 다르게 키에 의해 순서가 정해진다.
+- 가장 느리다.
 ### Hashtable
 - 자바 초기부터 사용된 맵 구현체
 - HashMap과 유사하지만 스레에 안전하다.
 - 성능이 떨어지며 스레드에 안전한 map을 사용하고 싶다면 ConcurrentHashMap을 사용하는 것이 좋다.
+
+# Queue
+- Queue 는 데이터를 담아 두었다가 먼저 들어온 데이터부터 처리하기 위해 사용된다.
+- List의 가장 큰 단점은 데이터가 많은 경우 처리 시간이 늘어난다는 점이다. 가장 앞에 있는 데이터를 지우면 마지막 데이터까지 한칸씩 옮기는 작업을 수행해야하므로 데이터가 많으면 속도가 느려진다.
+- queue 인터페이스를 구현한 클래스는 LinkedList 와 PriorityQueue 두가지로 나뉜다.
+
+### PriorityQueue
+큐에 추가된 순서와 상관없이 먼저 생성된 객체가 먼저 나오도록 되어 있는 Queue
+### LinkedBlockingQueue
+저장할 데이터의 크기를 선택적으로 정할 수도 있는 FIFO 기반의 링크 노드를 사용하는 블로킹 Queue
+### ArrayBlockingQueue
+저장되는 데이터의 크기가 정해져 있는 FIFO 기반의 블로킹 Queue
+### PriorityBlockingQueue
+저장되는 데이터의 크기가 정해져 있지 않고, 객체의 생성순서에 따라서 순서가 저장되는 블로킹 Queue
+### DelayQueue
+큐가 대기하는 시간을 지정하여 처리하도록 되어 있는 Queue
+### SynchronousQueue
+put() 메서드를 호출하면, 다른 스레드에서 take() 메서드가 호출될 때까지 대기하도록 되어 있는 Queue. 이 큐에는 저장되는 데이터가 없다. API에서 제공하는 대부분의 메서드는 0이나 null을 리턴한다.
