[TIL] 형식화 클래스, DateTimeFormatter

--- a/java/날짜와 관련된 클래스.md
+++ b/java/날짜와 관련된 클래스.md
@@ -150,3 +150,103 @@ plus(), minus() 와 같은 메서드로 날짜와 시간을 계산할 수 있는
 - DayOfWeek 클래스
   - java.time 패키지의 열거형(enum) 클래스이며, 일주일의 각 요일을 나타냅니다. 이 열거형은 다음과 같은 값들을 가집니다:
   - SUNDAY, MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY
+
+### java.time.format
+날짜와 시간을 원하는 형식으로 출력하고 해석할 수 있도록 도와주는 패키지<br>
+`DateTimeFormatter` 가 핵심 클래스
+- format()
+  - DatetimeFormatter 뿐만 아니라 LocalDate, LocalTime 같은 클래스에도 존재하는 메서드이다.
+```java
+LocalDate date = LocalDate.now();
+String yyyymmdd = DateTimeFormatter.ISO_LOCAL_DATE.format(date); // 2024-08-17
+String yyyymmdd = date.format(DateTimeFormatter.ISO_LOCAL_DATE); // 2024-08-17
+```
+- ofPattern() 으로 원하는 출력 형식을 직접 작성할 수 있다.
+```java
+DateTimeFormatter formatter = DateTimeFormatter.ofPatter("yyyy/MM/dd");
+```
+| 기호 | 설명                       | 예시                    |
+|------|----------------------------|-------------------------|
+| y    | 연도                       | `2024`, `24`            |
+| M    | 월 (숫자)                  | `1`, `01`, `Jan`, `January` |
+| d    | 일 (월의 일)               | `2`, `02`               |
+| E    | 요일                       | `Tue`, `Tuesday`        |
+| a    | 오전/오후                  | `AM`, `PM`              |
+| H    | 시간 (24시간제)             | `0`, `00`, `23`         |
+| h    | 시간 (12시간제)             | `1`, `01`, `12`         |
+| m    | 분                         | `0`, `00`, `59`         |
+| s    | 초                         | `0`, `00`, `59`         |
+| S    | 밀리초                     | `0`, `000`, `999`       |
+| n    | 나노초                     | `0`, `000000000`, `999999999` |
+| G    | 연대/시대                  | `AD`, `BC`              |
+| u    | 연도 (ISO)                 | `2024`                  |
+| L    | 월 (숫자)                  | `1`, `01`, `Jan`, `January` |
+| Q    | 분기                       | `1`, `Q1`, `1st quarter`|
+| q    | 분기 (숫자)                | `1`, `01`, `1st`        |
+| D    | 연중 일                    | `1`, `001`, `365`       |
+| w    | 연중 주                    | `1`, `01`, `53`         |
+| W    | 월중 주                    | `1`, `01`, `5`          |
+| F    | 월중 요일                  | `1`, `5`                |
+| z    | 시간대 (명칭)              | `PST`, `GMT+2`          |
+| X    | 시간대 (ISO 8601 기본)     | `Z`, `-08`, `+0530`     |
+| Z    | 시간대 (RFC 822)           | `-0800`, `+0530`        |
+| x    | 시간대 (ISO 8601)          | `-08`, `+0530`, `Z`     |
+| V    | 시간대 (영역 ID)           | `America/Los_Angeles`   |
+| p    | 오전/오후 (소문자)         | `am`, `pm`              |
+
+- ofLocalized~() 는 로케일에 종속적인 포맷터를 생성한다.
+```java
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.FormatStyle;
+import java.util.Locale;
+
+public class DateTimeFormatterExample {
+    public static void main(String[] args) {
+        // 현재 날짜와 시간
+        LocalDate date = LocalDate.now();
+        LocalTime time = LocalTime.now();
+
+        // 로케일 설정 (미국)
+        Locale usLocale = Locale.US;
+
+        // 로케일 설정 (프랑스)
+        Locale frLocale = Locale.FRANCE;
+
+        // 날짜의 로컬화된 포맷 (미국)
+        DateTimeFormatter usDateFormatter = DateTimeFormatter.ofLocalizedDate(FormatStyle.FULL).withLocale(usLocale);
+        String usDate = date.format(usDateFormatter);
+        System.out.println("US Date: " + usDate);  // 예: "Saturday, August 17, 2024"
+
+        // 날짜의 로컬화된 포맷 (프랑스)
+        DateTimeFormatter frDateFormatter = DateTimeFormatter.ofLocalizedDate(FormatStyle.FULL).withLocale(frLocale);
+        String frDate = date.format(frDateFormatter);
+        System.out.println("FR Date: " + frDate);  // 예: "samedi 17 août 2024"
+
+        // 시간의 로컬화된 포맷 (미국)
+        DateTimeFormatter usTimeFormatter = DateTimeFormatter.ofLocalizedTime(FormatStyle.SHORT).withLocale(usLocale);
+        String usTime = time.format(usTimeFormatter);
+        System.out.println("US Time: " + usTime);  // 예: "10:00 AM"
+
+        // 시간의 로컬화된 포맷 (프랑스)
+        DateTimeFormatter frTimeFormatter = DateTimeFormatter.ofLocalizedTime(FormatStyle.SHORT).withLocale(frLocale);
+        String frTime = time.format(frTimeFormatter);
+        System.out.println("FR Time: " + frTime);  // 예: "10:00"
+    }
+}
+```
+- parse() 를 통해 문자열을 다시 날짜 또는 시간으로 변환할 수 있다.
+```java
+// ISO_LOCAL_DATE 상수를 사용하여 문자열을 LocalDate로 파싱
+DateTimeFormatter formatter = DateTimeFormatter.ISO_LOCAL_DATE;
+String dateStr = "2024-08-17";
+LocalDate date = LocalDate.parse(dateStr, formatter);
+System.out.println(date);  // 2024-08-17
+
+// ofPattern()을 사용하여 특정 패턴의 포맷터 생성
+DateTimeFormatter formatter = DateTimeFormatter.ofPattern("dd/MM/yyyy");
+String dateStr = "17/08/2024";
+LocalDate date = LocalDate.parse(dateStr, formatter);
+System.out.println(date);  // 2024-08-17
+```
