--- a/spring boot/스프링 부트 시작하기.md
+++ b/spring boot/스프링 부트 시작하기.md
@@ -16,7 +16,7 @@
   - 헤더에 들어있는 정보에 따라서 처리하는 방법이 달라지거나 응답의 타입값이 바뀌기도 한다.
 - Message Body
   - POST, PUT 과 같은 경우 바디가 존재함
-```angular2html
+```java
 http -v ":8080/hello?name=Spring"
 GET /hello?name=Spring HTTP/1.1  //METHOD, PATH, HTTP version
 Accept: */* //다른 설정을 하지 않으면 모든 content type 을 수용하겠다는 의미 
@@ -36,7 +36,7 @@ User-Agent: HTTPie/3.2.1
   - 서버에서 보내주고 싶은 정보가 들어가기도 한다.
 - Message Body
   - 서버에서 보내는 메시지
-```angular2html
+```java
 HTTP/1.1 200 //프로토콜 버전, 상태코드
 Connection: keep-alive
 Content-Length: 12
