--- a/spring boot/04. 독립 실행형 스프링 애플리케이션.md
+++ b/spring boot/04. 독립 실행형 스프링 애플리케이션.md
@@ -45,10 +45,18 @@ webServer.start();
 
 ## 의존 오브젝트 추가
 - helloControllerService 를 추가하여 서비스 로직을 controller 가 아닌 service에서 수행하도록 작업을 위임했다.
+- 
 
 ## Dependency Injection, 의존 오브젝트 DI 적용
+- 주입 : 내부가 아니라 외부에서 객체를 생성해서 넣어주는 것을
+- 의존 : 내부에서 다른 클래스를 변수로 사용하는 것
+- 의존성 주입 : 내부에 변수로 들어가는 클래스를 외부에서 넣어주는 것
+- DI는 의존관계 역전의 원칙을 이용해 의존성을 분리시켜서 사용한다.
+  - 인터페이스를 사용해 서비스에서는 인터페이스를 매개변수로 받는다.
+  - 스프링 컨테이너는 빈으로 등록된 구현체를 어셈블러를 통해서 컨트롤러에 주입해준다.
 spring Container의 어셈블러가 자동으로 생성자에 구현체를 맵핑해주는 기술
 스프링 컨테이너가 빈으로 등록된 것을 어셈블러를 통해서 DI, 헬로 컨트롤러에 주입해주는 과정을 해보자
+
 
 ```java
 public interface HelloService {
@@ -120,13 +128,132 @@ webServer.start();
 ## DispatchServlet 으로 전환
 
 ## 애노테이션 매핑 정보 사용
+```java
+GenericWebApplicationContext genericWebApplicationContext = new GenericWebApplicationContext();
+genericWebApplicationContext.registerBean(HelloController.class);
+genericWebApplicationContext.registerBean(SimpleHelloService.class);
+//dispatcher servlet 은 GenericWebApplicationContext 를 사용해야한다.
 
+genericWebApplicationContext.refresh();
+
+webServer = serverFactory.getWebServer(servletContext -> {
+    servletContext.addServlet("dispatcherServlet",
+        new DispatcherServlet(genericWebApplicationContext)
+        //디스패쳐 서블릿에게 어떤 요청이 어떤 빈을 처리하라고 알려줘야함
+        // 1. xml , 2. mapping 정보를 처리할 컨트롤러 클래스 안에 코드로 맵핑 정보를 넣는 것.
+        // 2번은 컨트롤러에 맵핑 정보를 추가해준다. @GetMapping
+    ).addMapping("/*");
+});
+```
+
+```java
+@Controller
+// @RestController // 5. dispatcher 서블릿과는 관련이 없다., 이게 붙으면 아래의 모든 메서드가 @ResponseBody 가 붙여져 있다고 하는 것과 같다.
+//@RequestMapping // 5. 디스패쳐 서블릿이 모든 메소드를 다 뒤지면 느리니까 클래스에 컨트롤러로 명시해 줘서 빠르게 찾도록
+public class HelloController {
+  private final HelloService helloService;
+
+  public HelloController(HelloService helloService) {
+    this.helloService = helloService;
+  }
+  @GetMapping("/hello")
+  @ResponseBody
+  public String hello(String name) {
+    return helloService.sayHello(Objects.requireNonNull(name));
+  }
+}
+```
 ## 스프링 컨테이너로 통합
 
+```java
+
+  GenericWebApplicationContext genericWebApplicationContext = new GenericWebApplicationContext() {
+      //스프링 컨테이너를 초기화 하는 중에 부가적인 작업이 있다면 overriding 해서 hook 메소드를 추가하자
+      // 추가할때 다음과 같이 익명 클래스를 사용할 수 있다.
+      @Override
+      protected void onRefresh() {
+          super.onRefresh();
+            // 톰캣 서블릿을 스프링 컨테이너 띄울대 같이 띄워버림
+          ServletWebServerFactory servletFactory = new TomcatServletWebServerFactory();
+
+          WebServer dispatcherServlet = servletFactory.getWebServer(servletContext -> {
+              servletContext.addServlet("dispatcherServlet",
+                  new DispatcherServlet(this) //this = genericWebApplicationContext
+              ).addMapping("/*");
+          });
+          dispatcherServlet.start();
+      }
+  };
+  genericWebApplicationContext.registerBean(HelloController.class);
+  genericWebApplicationContext.registerBean(SimpleHelloService.class);
+  genericWebApplicationContext.refresh();
+
+```
+
 ## 자바 코드 구성 정보 사용
+스프링 컨테이너가 사용하는 구성정보, 우리가 만든 오브젝트를 어떻게 컨테이너 내에 컴포넌트로 등록하고,
+스프링 컨테이너 내의 bean 이 다른 컴포넌트를 사용한다면 어느시점에 의존시켜줄 것인가를 설정해줄 수 있다.
+예전에는 외부설정파일을 사용했다.
+팩토리 메소드를 사용해서 빈 오브젝트를 다 생성하고 의존관계 주입도 다 하고 리턴하는 오브젝트를 스프링 컨테이너에게 빈으로 등록해서 나중에 사용해 하면 되는 것
+왜 빈 오브젝트를 직접 만들어서 넣으려고 할까
+어떤 경우에는 빈 오브젝트를 만들고 초기화 하는 작업이 복잡할때가 있다. 이 복잡한 설정을 자바 코드로 만들면 간결해진다.
+어떤 경우에 이렇게 하면 좋을까?
+
+Configuration 이 붙은 클래스가 AonnotationConfig를 이용하는 애플리케이션 컨텍스트에 처음 등록된다는 사실이 중요하다.
+Configuration 이 붙은 클래스는 BeanFactoryMethod 를 가지는 것 이상으로 전체 애플리케이션을 구성하는데 필요한 중요한 정보들을 많이 넣을 수 있다.
+
+- `@Configuration` 어노테이션을 스프링 컨테이너 띄우는 클래스에 붙여줌
+- 팩토리 메소드들을 만듬
+  - ```java
+    @Bean //7.스프링에게 빈이라고 알려주기
+    public HelloController helloController(HelloService helloService) {
+        return new HelloController(helloService);
+    }
+
+    @Bean
+    public HelloService helloService() {
+        return new SimpleHelloService(); // 빈을 주입받을때 어떤 타입을 기대하는가?
+    }
+    ```
+- AnnotationConfigWebApplicationContext 를 통해 컨텍스트를 설정함
+  - ```java
+  		AnnotationConfigWebApplicationContext annotationConfigWebApplicationContext = new AnnotationConfigWebApplicationContext() {
+			// 어노테이션이 붙은 것들을 이용해 구성 정보를 가져오는 클래스
+
+			@Override
+			protected void onRefresh() {
+				super.onRefresh();
+
+				ServletWebServerFactory servletFactory = new TomcatServletWebServerFactory();
+
+				WebServer dispatcherServlet = servletFactory.getWebServer(servletContext -> {
+					servletContext.addServlet("dispatcherServlet",
+						new DispatcherServlet(this) //this = genericWebApplicationContext
+					).addMapping("/*");
+				});
+				dispatcherServlet.start();
+			}
+		};
+		// genericWebApplicationContext.registerBean(HelloController.class); //필요 없어짐, 빈을 어노테이션으로 등록하므로
+		// genericWebApplicationContext.registerBean(SimpleHelloService.class);
+		annotationConfigWebApplicationContext.register(LearnSpringbootApplication.class);
+		annotationConfigWebApplicationContext.refresh();
+    ```
 
 ## @Component 스캔
+클래스 정보를 팩토리 메소드를 만들어 빈 인스턴스를 생성하는 방법을 썼다. 보다 간결하게 빈을 등록하는 방법이 있다. 
+나를 빈으로 등록해줘 하고 어노테이션으로 지정할 수 있다. 
+그러면 스프링 컨테이너에있는 컴포넌트 스캐너가 컴포넌트가 붙은 애노테이션을 찾아서 빈에 등록을 해준다.
+매번 어디에 구성정보를 등록할 필요없이 작성할 클래스가 빈으로 등록되려면 어노테이션을 붙이면된다.
+편리하지만 정말 빈으로 등록할 클래스가 많아지게 되면 어떤것들이 등록되는가 찾아보기가 굉장히 번거롭다.
+@Component : 메타 에노테이션으로 가지고 있는 에노테이션에 붙여도 같은 역할을 해준다.
+애노테이션 코드 위에다가 이 애노테이션을 쓸 수 있다.
+1. 컴포넌트가 붙었다는 것은 스프링에 빈 오브젝트로 등록이 된다는 것
+2. 이게 어떤 종류다 라는 것을 구체적으로 명시해주고 싶을 떄가 있다. 웹 계층인지, 서비스 계층인지.. 구분할 수 있다.
+3. 어느 계층에서 어떤 역할을 하는 컴포넌트다 -> @Service @Repository @Controller...
 
 ## Bean 의 생명주기 메소드
+@Component 스캔 을 모든 빈 등록으로 사용할떄도 있지만 팩토리 메소드를 사용해서 작성하는 것도 필요할 때가 있다.
+
 
 ## SpringBootApplication
