[TIL] systme, nested class

--- a/java/인터페이스와 추상클래스.md
+++ b/java/인터페이스와 추상클래스.md
@@ -6,6 +6,9 @@
   - 구현 클래스에서 구현이 따로 필요 없다. 하지만 overriding 이 가능하다.
 - 인터페이스의 모든 멤버 변수는 `public static final` 이다.
 - 인터페이스의 모든 메서드는 `public abstarct` 이어야 한다.
+- JDK 8
+  - default 메서드 지원
+  - 람다 표현식과 참조를 사용할 수 있는 functional interface 지원, @FunctionalInterface
 
 ## 사용 이유
 1. 선언부는 선언부대로 가져가 쓰고 구현부 개발을 따로 동시에 진행할 수 있다.
