--- a/spring boot/자동 구성 기반 애플리케이션.md
+++ b/spring boot/자동 구성 기반 애플리케이션.md
@@ -143,10 +143,111 @@ learn_springboot.config.autoconfig.DispatcherServletConfig
 learn_springboot.config.autoconfig.TomcatWebServerConfig
 ```
 
-## 자동 구성 애노테이션 적용
-`@Configuration(proxyBeanMethods = false)` 적용에 따른 차이
-
-
-
-
 ## @Configuration 과 @ProxyBeanMethods
+`@Configuration(proxyBeanMethods = false)` 적용에 따른 차이
+Configuration 클래스의 특징은 Bean 메소드들을 가지고 있고 Bean 들이 자바 코드에 의해 메소드를 실행한다.
+평범한 팩토리 메소드 처럼 동작한다.
+
+스프링에 등록된 bean 은 싱글톤으로 등록된다.
+Bean 오브젝트를 스프링의 구성 정보에 등록하고 비교하면 같다는 결과가 나온다.
+
+```java
+public class ConfigurationTest {
+
+  @Test
+  void configurationTest() {
+    MyConfig myConfig = new MyConfig();
+    Bean1 bean1 = myConfig.bean1();
+    Bean2 bean2 = myConfig.bean2();
+
+    // Assertions.assertThat(bean1).isSameAs(bean2);
+    // 다르다고 나온다.
+
+    AnnotationConfigWebApplicationContext ac = new AnnotationConfigWebApplicationContext();
+    ac.register(MyConfig.class);
+    ac.refresh();
+
+    Bean1 bean3 = ac.getBean(Bean1.class);
+    Bean2 bean4 = ac.getBean(Bean2.class);
+
+    Assertions.assertThat(bean3.common).isSameAs(bean4.common);
+    // 동일하다고 나온다.
+    // @Configuration 이라는 어노테이션이 붙은 것을 스프링내의 환경에서는 동작 방식이 달라진다.
+  }
+
+  @Configuration(proxyBeanMethods = true)
+  static class MyConfig {
+    @Bean
+    Common common() {
+      return new Common();
+    }
+
+    @Bean
+    Bean1 bean1() {
+      return new Bean1(common());
+    }
+
+    @Bean
+    Bean2 bean2() {
+      return new Bean2(common());
+    }
+  }
+
+  static class Bean1 {
+    private final Common common;
+
+    Bean1(Common common) {
+      this.common = common;
+    }
+  }
+
+  static class Bean2 {
+    private final Common common;
+
+    Bean2(Common common) {
+      this.common = common;
+    }
+  }
+
+  static class Common {
+
+  }
+
+}
+
+```
+
+@Configuration 이붙은 클래스는 스프링 컨테이너에서 사용될 때
+`@Configuration(proxyBeanMethods = true)` 로 설정 되어있는 경우는,
+MyConfig 라는 클래스가 빈으로 등록될때 직접 등록되는게 아니라 프록시 오브젝트를 하나 앞에 두고 해당 프록시 오브젝트가 등록된다.
+
+```java
+static class MyConfigProxy extends MyConfig {
+    private Common common;
+
+    @Override
+    Common common() {
+        if (this.common == null) {
+            common = super.common(); // null 이면 새로 생성하고
+        }
+        return common; // 이 필드에 저장해둔 common 을 리턴한다.
+    }
+}
+
+@Test
+void proxyCommonMethod() {
+  MyConfigProxy myConfigProxy = new MyConfigProxy();
+  Bean1 bean1 = myConfigProxy.bean1();
+  Bean2 bean2 = myConfigProxy.bean2();
+
+  Assertions.assertThat(bean1.common).isSameAs(bean2.common);
+}
+```
+
+proxy 패턴을 사용해서 위와 같이 등록한다. 그러면 common 은 동일한 주소값을 가진 객체를 리턴하게 된다.
+proxyBeanMethods = true 설정은 스프링이 컨테이너가 시작할 때 이런 프록시 클래스를 생성해서, 
+Configuration 어노테이션이 붙은 클래스는 프록시를 만들어서 기능을 확장하게 해주는 것이다.
+스프링 5.2 에서 스프링의 proxyBeanMethods 를 끌 수 있는 기능을 지원하게 되었다.
+false 라면 프록시를 만들어 주지 않기 때문에 기대했던 것과 다르게 움직일 수 있다. 다른 bean 오브젝트를 직접 호출해서 사용하는 것은 위험하다.
+빈어노테이션이 붙은 메소드가 ㄷ또다른 빈 메소드를 직접 직접 호출하지 않고 그 자체로 괜찮다면 false 로 두고 사용해도 괜찮다.
+
